--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "engines" : { 
+    "npm" : ">=8.0.0 <9.0.0",
+    "node" : ">=16.0.0 <18.0.0"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
