--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "engines" : { 
-    "npm" : ">=8.0.0 <9.0.0",
-    "node" : ">=16.0.0 <18.0.0"
-  },
+  "engines": {
+    "node": "8.x",
+    "npm": ">= 3"
+}
   "eslintConfig": {
     "extends": [
       "react-app",
