--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/preset-env": "^7.19.4",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/register": "^7.18.9",
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
     "@mui/lab": "^5.0.0-alpha.57",
@@ -12,8 +15,13 @@
     "@testing-library/user-event": "^12.8.3",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.1.3",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "firebase": "^9.4.1",
+    "fs": "^0.0.1-security",
+    "ignore-styles": "^5.0.1",
     "lodash": "^4.17.21",
+    "path": "^0.12.7",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
@@ -25,7 +33,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server/index.js",
+    "react": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
