--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "demo",
   "version": "0.1.0",
+  "engines": {
+    "node": "18.x^",
+    "npm": "8.x^"
+  },
   "private": true,
   "dependencies": {
     "@babel/preset-env": "^7.19.4",
