--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "demo",
   "version": "0.1.0",
   "engines": {
-    "node": "18.x^",
-    "npm": "8.x^"
+    "node": "18.x",
+    "npm": "8.x"
   },
   "private": true,
   "dependencies": {
